# LiberTEM-panel-ui

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  docs_requirements.txt  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.binder/: environment.yml  postBuild  warmup.py
.github/workflows/: build-package.yml  ci.yml  python-publish.yml
examples/: Demo.ipynb  HoloTools.ipynb  StrainMapping.ipynb  UIContext.ipynb
prototypes/: LivePlotMulti.ipynb
src/libertem_ui/: __init__.py  api.py  base.py  figure.py  lifecycles.py  live_plot.py  phase.py  resources.py  strain.py  ui_context.py
src/libertem_ui/applications/: file_browser.py  image_transformer.py  image_utils.py  line_profile.py  terminal_logger.py
src/libertem_ui/applications/holography/: custom_unwrap.py  image_transformer.py  panels.py
src/libertem_ui/applications/strain/: __init__.py  phase.py  strain.py  strain_decomposition.py
src/libertem_ui/display/: display_base.py  gamma_mapper.py  image_datashader.py  image_db.py  vectors.py
src/libertem_ui/display/icons/: __init__.py
src/libertem_ui/results/: containers.py  results_manager.py  tracker.py
src/libertem_ui/utils/: __init__.py  colormaps.py  data.py  logging.py
src/libertem_ui/windows/: base.py  com.py  imaging.py  pick.py  simple.py  standalone.py  tools.py
src/udfs_ui/: __init__.py  base.py  lifecycles.py  live_plot.py  resources.py  ui_context.py
src/udfs_ui/applications/: load_dataset.py
src/udfs_ui/components/: __init__.py  base.py  com.py  file_browser.py  imaging.py  lifecycles.py  live_plot.py  load_dataset.py  masks.py  param_converters.py  pick.py  resources.py  result_containers.py  result_tracker.py  results.py  simple.py  terminal_logger.py  tools.py  ui_context.py
src/udfs_ui/display/: display_base.py  gamma_cmap.py  gamma_cmap.ts  gamma_mapper.ts  image_datashader.py  image_db.py  lattice.py  vectors.py
src/udfs_ui/display/icons/: __init__.py
src/udfs_ui/display/utils/: __init__.py  colormaps.py
src/udfs_ui/results/: containers.py  result_containers.py  result_tracker.py  results_manager.py
src/udfs_ui/utils/: __init__.py  colormaps.py  export.py  fitting.py  masks.py  notebook_tools.py  panel_components.py  progress.py
src/udfs_ui/windows/: base.py  com.py  imaging.py  live_plot.py  load_dataset.py  pick.py  result_containers.py  simple.py  standalone.py  terminal_logger.py  tools.py  ui_context.py
tests/: test_functional.py
