[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libertem_ui"
version = "0.0.1"
license = {file = "LICENSE"}
description="Panel+Bokeh-based GUI Toolkit for LiberTEM"
readme="README.rst"
requires-python = ">=3.9"
authors = [
    {"name" = "Matthew Bryan", email="matthewbryan52@gmail.com"},
]
keywords=["electron microscopy", "notebook", "gui"]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Environment :: Web Environment',
    'Environment :: Console',
]
dependencies = [
    "libertem",
    "libertem-live",  # used for RecordUDF and SignalMonitorUDF
    "libertem-blobfinder",  # used for Strain Application
    "numpy",
    "scipy",
    "pandas",
    "scikit-image",
    "tifffile",
    "bokeh>=3.4.0",
    "panel>=1",
    "xarray",
    "datashader",
    "colorcet",
    "humanize",
    "bidict",
    "StrEnum",  # in stdlib from 3.11
    "typing_extensions",
]

[project.optional-dependencies]
notebook = [
    "notebook",
    "ipython",
    "ipywidgets",
]

[project.urls]
repository = "https://github.com/LiberTEM/LiberTEM-panel-ui"

[tool.setuptools.packages.find]
where = ["src"]